--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -15,6 +15,7 @@
 
     <script src="~/lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="~/lib/knockout/knockout-3.4.2.js"></script>
+    <script src="~/lib/knockout/knockout.customs.js"></script>
     <script src="~/lib/knockout/knockout.validation.min.js"></script>
     <script src="~/lib/pNotify/pnotify.custom.min.js"></script>
     <script src="~/js/notification.js"></script>
@@ -34,7 +35,7 @@
             <div class="user_card">
                 <div class="d-flex justify-content-center">
                     <div class="brand_logo_container">
-                        <img src="~/images/logo.svg" class="brand_logo" alt="Logo">
+                        <img src="~/images/tp.svg" class="brand_logo" alt="Logo">
                     </div>
                 </div>
                 @RenderBody()
