--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 ﻿@using web
 @using web.Models
+@using System.Linq
+@using System.Collections.Generic
+@using System
+@using web.Extensions
+@using web.Common
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
