--- a/Views/DestinationPortals/Pay.cshtml
+++ b/Views/DestinationPortals/Pay.cshtml
@@ -2,6 +2,7 @@
 @using Newtonsoft.Json;
 @{
     Layout = "_LoginLayout";
+    var paid = Model.Payments.Where(x => x.ResultStatus == "OK").Sum(x => x.Price);
 }
 
 <style>
@@ -12,24 +13,19 @@
         height: 100%;
         background: #7E57C2 !important;
     }
-
-    .user_card {
-        background: #B39DDB;
-    }
-
-    .brand_logo_container {
-        background: #7E57C2;
-    }
 </style>
 <div id="login_form">
     <form id="pay_form" action="/DestinationPortals/Pay/@Model.Id" method="post">
         <div id="login_form_box" class="justify-content-center form_container">
 
 
-            <div class="" style="width:250px;margin:auto;">
-                <div style="width:100%;">مبلغ</div>
-                <input type="text" id="Price" name="Price" class="form-control "
-                       maxlength="10" style="text-align:right;margin-top:5px;" placeholder="ریال">
+            <div style="width:250px;margin:auto;">
+                <div>مبلغ</div>
+                <div>
+                    <h5>
+                        @Model.Price.ToString("##,###")
+                    </h5>
+                </div>
             </div>
             <div style="height:20px;"></div>
             <div style="width:250px;margin:auto;">
@@ -42,16 +38,13 @@
             </div>
         </div>
         <div class="d-flex justify-content-center mt-3 login_container">
-            <button type="submit" class="btn btn-success">پرداخت</button>
+            <button type="submit" class="btn btn-success">
+                پرداخت
+                <div class="price-box">
+                    @Model.Price.ToString("##,###")
+                    <div><i class="fa fa-plus"></i> @Pricing.CalcWagePrice(Model.Price)</div>
+                </div>
+            </button>
         </div>
     </form>
-    <script>
-                        $("#pay_form").submit(function () {
-                            var data = @(Html.Raw(JsonConvert.SerializeObject(Model)));
-                            if (!data.Price && !$("#Price").val()) {
-                                notify('خطا', 'لطفا مبلغ را وارد نمایید!', 'error');
-                                return false;
-                            }
-                        });
-    </script>
 </div>
