--- a/Views/PersonalPortal/Pay.cshtml
+++ b/Views/PersonalPortal/Pay.cshtml
@@ -11,14 +11,6 @@
         height: 100%;
         background: #4CAF50 !important;
     }
-
-    .user_card {
-        background: #C8E6C9;
-    }
-
-    .brand_logo_container {
-        background: #4caf50;
-    }
 </style>
 <div id="login_form">
     <form id="pay_form" action="/PersonalPortal/Pay/@Model.ID" method="post">
@@ -27,15 +19,15 @@
             {
 
                 <div class="" style="width:250px;margin:auto;">
-                    <div style="width:100%;">مبلغ</div>
+                    <div style="width:100%;">مبلغ(تومان)</div>
                     <input type="text" id="Price" name="Price" class="form-control "
-                           maxlength="10" style="text-align:right;margin-top:5px;" placeholder="ریال">
+                           maxlength="15" style="text-align:right;margin-top:5px;" placeholder="تومان" data-format="price">
                 </div>
             }
             else
             {
                 <div>
-                    <h2 style="text-align:center;">@(long.Parse(Model.Price).ToString("##,###")) ریال</h2>
+                    <h2 style="text-align:center;">@(long.Parse(Model.Price).ToString("##,###")) تومان</h2>
                 </div>
             }
             <div style="height:20px;"></div>
